feat(core): Implementação definitiva do Meta-Object Protocol (MOP) e Injeção Segura de Listeners
Esta atualização finaliza a arquitetura de Metaprogramação e Reflexão do motor XPL, garantindo isolamento total de estado e prevenindo loops infinitos em operações reativas.

Alterações principais:
- 🏗️ Arquitetura: Separação limpa entre o Core (`MetaReflectionEngine`) e a Standard Library (`ReflectNativeModel`).
- 🧠 MOP API (`ReflectNativeModel`): Criação da classe nativa `Reflect` com superpoderes de introspeção (`hasMethod`, `getFields`), mutação silenciosa (`setFieldValue`), metaprogramação ativa (`injectField`, `newInstance`) e auditoria (`getActiveListeners`).
- 💉 Injeção de Dependência (`Interpreter.java` & `XplClass.java`): O motor agora injeta automaticamente a API de Reflexão na variável `this.target` dos Listeners (junto com `event`, `property` e `value`), eliminando a necessidade de passar argumentos manuais e protegendo a memória do objeto original.
- 🐛 Correção AST (`Interpreter.java`): Corrigida a leitura de metadados no `visitDeclareDeclStmt` para aceitar `stmt.listeners` e `stmt.decorators` em simultâneo, garantindo que as classes suportam anotações estáticas e reativas coexistentes.

A partir de agora, os Listeners XPL atuam com segurança absoluta de memória, operando com reflexão profunda sem corromper o ciclo de execução (Bypass State).